# bolt

./: CMakeLists.txt  Makefile  README.md  conanfile.py
.agents/skills/bolt-build/: SKILL.md
.github/actions/bolt-build-base/: action.yml
.github/workflows/: build-main.yml  build-test.yml  pre-commit-checks.yml
bolt/: CMakeLists.txt
bolt/benchmarks/paimon/: CMakeLists.txt
bolt/buffer/: Buffer.h
bolt/common/base/: BloomFilter.h  Exceptions.h  SpillConfig.h
bolt/common/encode/: Coding.h
bolt/common/file/: File.cpp  File.h  FileSystems.cpp  FileSystems.h
bolt/common/io/: Options.h
bolt/common/memory/: MemoryPool.cpp
bolt/connectors/: CMakeLists.txt  Connector.cpp  Connector.h  ConnectorObjectFactory.cpp  ConnectorObjectFactory.h  ConnectorOptions.h
bolt/connectors/arrow/: ArrowMemoryConnector.h  ArrowMemoryConnectorSplit.h
bolt/connectors/fuzzer/: FuzzerConnector.h  FuzzerConnectorSplit.h
bolt/connectors/hive/storage_adapters/gcs/tests/: CMakeLists.txt  GcsEmulator.h  GcsFileSystemTest.cpp  GcsInsertTest.cpp  GcsMultipleEndpointsTest.cpp  GcsUtilTest.cpp
bolt/core/: PlanNode.h  QueryConfig.h  SimpleFunctionMetadata.h
bolt/exec/: ContainerRowSerde.cpp  Driver.h  Exchange.cpp  Exchange.h  ExchangeQueue.cpp  ExchangeSource.h  LocalPlanner.cpp  Merge.cpp  Merge.h  MergeSource.cpp  NestedLoopJoinProbe.cpp  NestedLoopJoinProbe.h  Operator.h  PartitionedOutput.cpp  PartitionedOutput.h  RowContainer.cpp  RowContainer.h  SortBuffer.cpp  SortBuffer.h  Spill.cpp  Spill.h  Spiller.cpp  TableScan.cpp  Task.cpp  Task.h  VariantSerdeDetail.h  Window.cpp
bolt/expression/: CastExpr-inl.h  CastExpr-tpl.cpp  SimpleFunctionRegistry.cpp  SimpleFunctionRegistry.h  TypeSignature.cpp  UdfTypeResolver.h  VectorReaders.h  VectorWriters.h
bolt/functions/: FunctionRegistry.cpp
bolt/jit/: CompiledModule.cpp  CompiledModule.h
bolt/row/: CompactRow.cpp  UnsafeRowDeserializers.h  UnsafeRowFast.cpp  UnsafeRowFast.h
bolt/serializers/: ArrowSerializer.cpp  CMakeLists.txt  PrestoSerializer.cpp  RowSerializer.h  UnsafeRowSerializer.cpp
bolt/type/: Type.cpp  Type.h  Variant.cpp  Variant.h  VariantValue.h
bolt/vector/: BaseVector.cpp  BaseVector.h  BiasVector.h  CMakeLists.txt  ComplexVector.cpp  ComplexVector.h  ConstantVector.h  DecodedVector.cpp  DictionaryVector.h  FlatVector-inl.h  FlatVector.cpp  FlatVector.h  FunctionVector.h  LazyVector.h  SequenceVector.h  VariantVector.cpp  VariantVector.h  VectorEncoding.cpp  VectorEncoding.h  VectorStream.h  VectorTypeUtils.h
doc/: coding-style.md
scripts/: install-bolt-deps.sh
(+197 files in other folders)
